--- a/shopapp-angular/src/app/components/register/register.component.html
+++ b/shopapp-angular/src/app/components/register/register.component.html
@@ -18,7 +18,9 @@
                     @if(phoneNumber.length < 6 && registerForm.form.touched) {
                         <p class="text-danger">Phone phải có ít nhất 6 ký tự</p>
                     }
-                    
+                    @if(phoneNumber.length > 10 && registerForm.form.touched) {
+                        <p class="text-danger">Phone không quá 10 ký tự</p>
+                    }
                 </div>
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
